# books_gen

./: .gitignore  README.md  install.bat  install.sh  pyproject.toml  run.py  setup.py
books_gen/: __init__.py  config.py  langgraph.json  main.py
books_gen/api/: api.py
books_gen/domain/: prompts.py
books_gen/graphs/: chains.py  edges.py  graph.py  nodes.py  state.py
books_gen/infrastructure/api/: api.py  utils.py
books_gen/infrastructure/static/: index.html
books_gen/models/: book_models.py
books_gen/static/: index.html
books_gen/tools/: book_tools.py
notebooks/: 01_test_graph_flow.ipynb
